<?xml version="1.0"?>
<package format="3">
  <name>serial_parser</name>
  <version>0.1.0</version>
  <description>A simple library to help parse serial data automatically.</description>

  <maintainer email="shrijitsingh99@gmail.com">Shrijit Singh</maintainer>

  <license>TODO</license>

  <url type="repository">http://wiki.ros.org/serial_parser</url>

  <author email="shrijitsingh99@gmail.com">Shrijit Singh</author>

  <!-- ROS 1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>

  <!-- Common Dependency -->
  <depend>serial</depend>

  <!-- ROS 2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 2">rclcpp</build_depend>

  <exec_depend condition="$ROS_VERSION == 2">rclcpp</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
